fix: add missing color

--- a/kyteware-home/src/common.css
+++ b/kyteware-home/src/common.css
@@ -18,6 +18,7 @@
   --color-primary-dark: #18171d; 
 
   --color-secondary: #e2826a;
+  --color-secondary-light: #e7aa9a;
   --color-secondary-dark: #1c100d;
 
   --standard-border-width: 1.5px;
